--- a/package.json
+++ b/package.json
@@ -13,8 +13,23 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "next": "^14.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "@radix-ui/react-icons": "^1.3.2",
+    "@shadcn/ui": "^0.0.4",
+    "framer-motion": "^12.16.0",
+    "next": "^15.3.3",
+    "openai": "^5.2.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "yarn": "^1.22.22",
+    "zustand": "^5.0.5"
+  },
+  "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.8",
+    "@types/node": "24.0.0",
+    "@types/react": "19.1.7",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.4",
+    "tailwindcss": "^3.4.17",
+    "typescript": "5.8.3"
   }
 }
